fix: simplify runner scripts by configuring exec-maven-plugin fully in POMs